--- a/notebooks/Add run elements.ipynb
+++ b/notebooks/Add run elements.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 241,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 242,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 243,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 244,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 245,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 246,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -264,10 +264,10 @@
     "                \"early_stopping_patience\": 5},\n",
     "    \"learning_rate\": [0.001, 0.0001],\n",
     "    \"virtual_batch_size_ratio\": [0.125, 0.25,0.5,1.0],\n",
-    "    \"batch_size\": [256,512,1024,2048],\n",
+    "    \"batch_size\": [256,512,1024],\n",
     "    \"weights\": [0, 1],\n",
     "    \"mask_type\": [\"sparsemax\", \"entmax\"],\n",
-    "    \"n_d\": [4, 12],\n",
+    "    \"n_d\": [6, 12],\n",
     "    \"n_steps\": [3, 10],\n",
     "    \"gamma\": [1.0, 2.0],\n",
     "    \"n_independent\": [2, 3],\n",
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 247,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -335,11 +335,11 @@
     "                \"val_size\": 0.2,\n",
     "                \"early_stopping_patience\": 5},\n",
     "    \"learning_rate\": [0.001, 0.0001],\n",
-    "    \"batch_size\": [256,512,1024,2048],\n",
-    "    \"input_embed_dim\": [16,32,64],\n",
-    "    \"embedding_initialization\": [\"kaiming\", \"kaiming_uniform\", \"kaiming_normal\"],\n",
+    "    \"batch_size\": [512,1024,2048],\n",
+    "    #\"input_embed_dim\": [16,32,64],\n",
+    "    \"embedding_initialization\": [\"kaiming_uniform\", \"kaiming_normal\"],\n",
     "    \"shared_embedding_fraction\": [0.125,0.25,0.5],\n",
-    "    \"num_heads\": [6,10],\n",
+    "    #\"num_heads\": [8,10],\n",
     "    \"num_attn_blocks\":[4,10],\n",
     "    \"attn_dropout\":[0.05,0.3],\n",
     "    \"add_norm_dropout\":[0.05,0.3],\n",
@@ -347,14 +347,6 @@
     "    \"ff_hidden_multiplier\":[2,6],\n",
     "    \"transformer_activation\":[\"GEGLU\", \"ReGLU\",\"SwiGLU\"],\n",
     "    \"embedding_dropout\":[0.05,0.3],\n",
-    "    \"batch_norm_continuous_input\":[0.05,0.3],\n",
-    "    \n",
-    "\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
     "    \n",
     "\"optimizer_fn\": {\n",
     "        \"Adam\": {\"weight_decay\": [0.0001, 0.01]},\n",
@@ -396,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 248,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -410,6 +402,10 @@
     "    \n",
     "    \"learning_rate\": [0.001, 0.0001], \n",
     "    \"batch_size\": [128,256,512,1024],\n",
+    "    \"gflu_stages\": [4,8],\n",
+    "    \"gflu_dropout\": [0.0,0.3],\n",
+    "    \"embedding_dropout\":[0.05,0.3],\n",
+    "    \n",
     "    \n",
     "\"optimizer_fn\": {\n",
     "        \"Adam\": {\"weight_decay\": [0.0001, 0.01]},\n",
@@ -450,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 249,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -462,25 +458,16 @@
     "                \"val_size\": 0.2,\n",
     "                \"early_stopping_patience\": 5},\n",
     "    \n",
+    "    \"learning_rate\": [0.01, 0.0001], \n",
+    "    \"batch_size\": [512,1024,2048],\n",
     "    'num_layers': [1,2],\n",
-    "    'num_trees': [1024, 2048],\n",
+    "    'num_trees': [1024, 2048, 4096],\n",
     "    'additional_tree_output_dim': [2, 3, 4],\n",
-    "    'depth': [4, 5],\n",
+    "    'depth': [4, 7],\n",
     "    'choice_function': ['entmax15', 'sparsemax'],\n",
     "    'bin_function': ['entmoid15', 'sparsemoid'],\n",
-    "    'max_features': [None, 50, 100],\n",
-    "    'input_dropout': [0.0, 0.2, 0.4],\n",
-    "    'initialize_response': ['normal', 'uniform'],\n",
-    "    'initialize_selection_logits': ['uniform', 'normal'],\n",
-    "    'threshold_init_beta': [0.1, 1.0, 10.0],\n",
-    "    'threshold_init_cutoff': [0.5, 0.9, 1.5],\n",
-    "    'cat_embedding_dropout': [0.0, 0.1, 0.2],\n",
-    "    'embed_categorical': [True, False],\n",
-    "    'head': ['LinearHead'],\n",
-    "    'embedding_dropout': [0.0, 0.1, 0.2],\n",
-    "    'batch_norm_continuous_input': [True, False],\n",
-    "    \"learning_rate\": [0.001, 0.0001], \n",
-    "    \"batch_size\": [512,1024,2048],\n",
+    "    'input_dropout': [0.0, 0.3],\n",
+    "    'embed_categorical':[True, False],\n",
     "    \n",
     "\"optimizer_fn\": {\n",
     "        \"Adam\": {\"weight_decay\": [0.0001, 0.01]},\n",
@@ -540,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 250,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -553,7 +540,7 @@
     "                \"early_stopping_patience\": 5,\n",
     "                \"precision\": 16},\n",
     "\n",
-    "\"batch_size\": [128,256,512,1024],\n",
+    "\"batch_size\": [512,1024,2048],\n",
     "\"learning_rate\": [0.001,0.0001],\n",
     "\"layers\": [\"128-64-32\", \"64-32-16\", \"512-128-32\"],\n",
     "\"activation\": [\"ReLU\", \"LeakyReLU\"],\n",
@@ -605,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 251,
    "id": "f65c1a1a",
    "metadata": {},
    "outputs": [],
@@ -617,8 +604,19 @@
     "                \"val_size\": 0.2,\n",
     "                \"early_stopping_patience\": 5},\n",
     "    \n",
-    "    \"batch_size\": [128,256,512,1024],\n",
-    "    \"learning_rate\": [0.001,0.0001],\n",
+    "    \"batch_size\": [512,1024,2048],\n",
+    "    \"learning_rate\": [0.01,0.0001],\n",
+    "    \"embedding_bias\":[True,False],\n",
+    "    \"embedding_initialization\": ['kaiming_uniform', 'kaiming_normal'],\n",
+    "    \"shared_embedding_fraction\": [0.125,0.25,0.5],\n",
+    "\n",
+    "    \"num_attn_blocks\":[4,10],\n",
+    "    \"attn_dropout\":[0.05,0.3],\n",
+    "    \"add_norm_dropout\":[0.05,0.3],\n",
+    "    \"ff_dropout\":[0.05,0.3],\n",
+    "    \"ff_hidden_multiplier\":[2,6],\n",
+    "    \"transformer_activation\":[\"GEGLU\", \"ReGLU\",\"SwiGLU\"],\n",
+    "    \"embedding_dropout\":[0.05,0.3],\n",
     "    \n",
     "\"optimizer_fn\": {\n",
     "        \"Adam\": {\"weight_decay\": [0.0001, 0.01]},\n",
@@ -660,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 252,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -715,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 253,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -747,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 254,
    "id": "6f496023",
    "metadata": {},
    "outputs": [],
@@ -808,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 255,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
