add regression target range

--- a/notebooks/ExplorationBook.ipynb
+++ b/notebooks/ExplorationBook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "id": "abd838c3",
    "metadata": {},
    "outputs": [],
@@ -15,17 +15,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 39,
    "id": "3f0405c2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(r\"../output/default_pytorch_tabular_benchmark.csv\")"
+    "df = pd.read_csv(r\"../output/catembed_benchmark.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 40,
    "id": "b9161df4",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 41,
    "id": "9e4f9922",
    "metadata": {},
    "outputs": [
@@ -88,46 +88,70 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>0</th>\n",
        "      <td>housing</td>\n",
-       "      <td>tabnet</td>\n",
-       "      <td>516.128497</td>\n",
+       "      <td>fttransformer</td>\n",
+       "      <td>462.767147</td>\n",
        "      <td>mse</td>\n",
-       "      <td>{'Adam_weight_decay': 0.000157702512840002, 'R...</td>\n",
-       "      <td>{'mse': 227.6794889889087, 'rmse': 15.08905195...</td>\n",
+       "      <td>{'AdamW_weight_decay': 0.00039433546917991806,...</td>\n",
+       "      <td>{'mse': 0.43777984500887185, 'rmse': 0.6616493...</td>\n",
        "      <td>[1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>227.679489</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-169.840903</td>\n",
-       "      <td>15.089052</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.437780</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.671509</td>\n",
+       "      <td>0.661649</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>housing</td>\n",
+       "      <td>categoryembedding</td>\n",
+       "      <td>164.705062</td>\n",
+       "      <td>mse</td>\n",
+       "      <td>{'AdamW_weight_decay': 0.007850870740091056, '...</td>\n",
+       "      <td>{'mse': 1.3037851873733184, 'rmse': 1.14183413...</td>\n",
+       "      <td>[1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1.303785</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.021696</td>\n",
+       "      <td>1.141834</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   dataset   model    run_time eval_metric  \\\n",
-       "7  housing  tabnet  516.128497         mse   \n",
+       "   dataset              model    run_time eval_metric  \\\n",
+       "0  housing      fttransformer  462.767147         mse   \n",
+       "1  housing  categoryembedding  164.705062         mse   \n",
        "\n",
        "                                         best_params  \\\n",
-       "7  {'Adam_weight_decay': 0.000157702512840002, 'R...   \n",
+       "0  {'AdamW_weight_decay': 0.00039433546917991806,...   \n",
+       "1  {'AdamW_weight_decay': 0.007850870740091056, '...   \n",
        "\n",
        "                                      output_metrics  \\\n",
-       "7  {'mse': 227.6794889889087, 'rmse': 15.08905195...   \n",
+       "0  {'mse': 0.43777984500887185, 'rmse': 0.6616493...   \n",
+       "1  {'mse': 1.3037851873733184, 'rmse': 1.14183413...   \n",
        "\n",
-       "                                         debug_ytrue  f1         mse  \\\n",
-       "7  [1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3... NaN  227.679489   \n",
+       "                                         debug_ytrue    f1       mse accuracy  \\\n",
+       "0  [1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...  None  0.437780     None   \n",
+       "1  [1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...  None  1.303785     None   \n",
        "\n",
-       "   accuracy  recall  precision  auc  area_under_pr    r2_score       rmse  \n",
-       "7       NaN     NaN        NaN  NaN            NaN -169.840903  15.089052  "
+       "  recall precision   auc area_under_pr  r2_score      rmse  \n",
+       "0   None      None  None          None  0.671509  0.661649  \n",
+       "1   None      None  None          None  0.021696  1.141834  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
