--- a/notebooks/ExplorationBook.ipynb
+++ b/notebooks/ExplorationBook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "id": "abd838c3",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "id": "3f0405c2",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "id": "b9161df4",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "id": "9e4f9922",
    "metadata": {},
    "outputs": [
@@ -96,15 +96,34 @@
        "      <td>{'AdamW_weight_decay': 0.00039433546917991806,...</td>\n",
        "      <td>{'mse': 0.43777984500887185, 'rmse': 0.6616493...</td>\n",
        "      <td>[1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.437780</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.671509</td>\n",
        "      <td>0.661649</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>housing</td>\n",
+       "      <td>fttransformer</td>\n",
+       "      <td>3221.501979</td>\n",
+       "      <td>mse</td>\n",
+       "      <td>{'AdamW_weight_decay': 0.000936224711762532, '...</td>\n",
+       "      <td>{'mse': 0.5708966890941433, 'rmse': 0.75557705...</td>\n",
+       "      <td>[1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.570897</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.571624</td>\n",
+       "      <td>0.755577</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -115,13 +134,13 @@
        "      <td>{'AdamW_weight_decay': 0.007850870740091056, '...</td>\n",
        "      <td>{'mse': 1.3037851873733184, 'rmse': 1.14183413...</td>\n",
        "      <td>[1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>1.303785</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.021696</td>\n",
        "      <td>1.141834</td>\n",
        "    </tr>\n",
@@ -130,28 +149,33 @@
        "</div>"
       ],
       "text/plain": [
-       "   dataset              model    run_time eval_metric  \\\n",
-       "0  housing      fttransformer  462.767147         mse   \n",
-       "1  housing  categoryembedding  164.705062         mse   \n",
+       "   dataset              model     run_time eval_metric  \\\n",
+       "0  housing      fttransformer   462.767147         mse   \n",
+       "2  housing      fttransformer  3221.501979         mse   \n",
+       "1  housing  categoryembedding   164.705062         mse   \n",
        "\n",
        "                                         best_params  \\\n",
        "0  {'AdamW_weight_decay': 0.00039433546917991806,...   \n",
+       "2  {'AdamW_weight_decay': 0.000936224711762532, '...   \n",
        "1  {'AdamW_weight_decay': 0.007850870740091056, '...   \n",
        "\n",
        "                                      output_metrics  \\\n",
        "0  {'mse': 0.43777984500887185, 'rmse': 0.6616493...   \n",
+       "2  {'mse': 0.5708966890941433, 'rmse': 0.75557705...   \n",
        "1  {'mse': 1.3037851873733184, 'rmse': 1.14183413...   \n",
        "\n",
-       "                                         debug_ytrue    f1       mse accuracy  \\\n",
-       "0  [1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...  None  0.437780     None   \n",
-       "1  [1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3...  None  1.303785     None   \n",
+       "                                         debug_ytrue  f1       mse  accuracy  \\\n",
+       "0  [1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3... NaN  0.437780       NaN   \n",
+       "2  [1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3... NaN  0.570897       NaN   \n",
+       "1  [1.319, 2.763, 0.813, 1.935, 1.052, 1.713, 1.3... NaN  1.303785       NaN   \n",
        "\n",
-       "  recall precision   auc area_under_pr  r2_score      rmse  \n",
-       "0   None      None  None          None  0.671509  0.661649  \n",
-       "1   None      None  None          None  0.021696  1.141834  "
+       "   recall  precision  auc  area_under_pr  r2_score      rmse  \n",
+       "0     NaN        NaN  NaN            NaN  0.671509  0.661649  \n",
+       "2     NaN        NaN  NaN            NaN  0.571624  0.755577  \n",
+       "1     NaN        NaN  NaN            NaN  0.021696  1.141834  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
