--- a/notebooks/Add run elements.ipynb
+++ b/notebooks/Add run elements.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 1,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 2,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 3,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 4,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 5,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 6,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 7,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 8,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 9,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 10,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 11,
    "id": "f65c1a1a",
    "metadata": {},
    "outputs": [],
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 12,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 13,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 14,
    "id": "6f496023",
    "metadata": {},
    "outputs": [],
@@ -801,12 +801,26 @@
     "    generate_model_template(\"adult\",\"node\", param_grid = node_large_param_grid.copy()),\n",
     "    generate_model_template(\"adult\",\"autoint\", param_grid = autoint_large_param_grid.copy()),\n",
     "    generate_model_template(\"adult\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
+    "\n",
+    "\n",
+    "    generate_model_template(\"heloc\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
+    "    generate_model_template(\"heloc\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
+    "    generate_model_template(\"heloc\", \"resnet\", param_grid = resnet_large_param_grid.copy()),\n",
+    "    generate_model_template(\"heloc\", \"s1dcnn\", param_grid = s1dcnn_large_param_grid.copy()),\n",
+    "    generate_model_template(\"heloc\", \"tabnet\",param_grid = tabnet_large_param_grid.copy()),\n",
+    "    generate_model_template(\"heloc\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
+    "    generate_model_template(\"heloc\",\"fttransformer\", param_grid = fttransformer_large_param_grid.copy()),\n",
+    "    generate_model_template(\"heloc\", \"categoryembedding\", param_grid = catembed_large_param_grid.copy()),\n",
+    "    generate_model_template(\"heloc\",\"gandalf\", param_grid = gandalf_large_param_grid.copy()),\n",
+    "    generate_model_template(\"heloc\",\"node\", param_grid = node_large_param_grid.copy()),\n",
+    "    generate_model_template(\"heloc\",\"autoint\", param_grid = autoint_large_param_grid.copy()),\n",
+    "    generate_model_template(\"heloc\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 15,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
