heloc covertype tests

--- a/notebooks/Add run elements.ipynb
+++ b/notebooks/Add run elements.ipynb
@@ -805,7 +805,7 @@
     "\n",
     "    generate_model_template(\"heloc\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
     "    generate_model_template(\"heloc\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
-    "    generate_model_template(\"heloc\", \"resnet\", param_grid = resnet_large_param_grid.copy()),\n",
+    "    generate_model_template(\"heloc\", \"resnet18\", param_grid = resnet_large_param_grid.copy()),\n",
     "    generate_model_template(\"heloc\", \"s1dcnn\", param_grid = s1dcnn_large_param_grid.copy()),\n",
     "    generate_model_template(\"heloc\", \"tabnet\",param_grid = tabnet_large_param_grid.copy()),\n",
     "    generate_model_template(\"heloc\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
@@ -815,6 +815,20 @@
     "    generate_model_template(\"heloc\",\"node\", param_grid = node_large_param_grid.copy()),\n",
     "    generate_model_template(\"heloc\",\"autoint\", param_grid = autoint_large_param_grid.copy()),\n",
     "    generate_model_template(\"heloc\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
+    "\n",
+    "\n",
+    "    generate_model_template(\"covertype\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
+    "    generate_model_template(\"covertype\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
+    "    generate_model_template(\"covertype\", \"resnet18\", param_grid = resnet_large_param_grid.copy()),\n",
+    "    generate_model_template(\"covertype\", \"s1dcnn\", param_grid = s1dcnn_large_param_grid.copy()),\n",
+    "    generate_model_template(\"covertype\", \"tabnet\",param_grid = tabnet_large_param_grid.copy()),\n",
+    "    generate_model_template(\"covertype\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
+    "    generate_model_template(\"covertype\",\"fttransformer\", param_grid = fttransformer_large_param_grid.copy()),\n",
+    "    generate_model_template(\"covertype\", \"categoryembedding\", param_grid = catembed_large_param_grid.copy()),\n",
+    "    generate_model_template(\"covertype\",\"gandalf\", param_grid = gandalf_large_param_grid.copy()),\n",
+    "    generate_model_template(\"covertype\",\"node\", param_grid = node_large_param_grid.copy()),\n",
+    "    generate_model_template(\"covertype\",\"autoint\", param_grid = autoint_large_param_grid.copy()),\n",
+    "    generate_model_template(\"covertype\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
     "]"
    ]
   },
