--- a/notebooks/Add run elements.ipynb
+++ b/notebooks/Add run elements.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 122,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 123,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 124,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 125,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -161,8 +161,7 @@
     "\n",
     "\n",
     "xgb_large_param_grid ={\n",
-    "            \"outer_params\": {\"hyperopt_evals\": 100,\n",
-    "                            \"validation_fraction\": 0.2},\n",
+    "           \n",
     "    \n",
     "            \"n_estimators\": [100,1100],\n",
     "            \"max_bin\": [128,512],\n",
@@ -179,6 +178,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "6ddf4b8d-14a4-44a9-b971-a68161336637",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# CatBoost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "73cfb3bc-817f-40db-a79e-fcabf2757d72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "catboost_small_param_grid = {\n",
+    "\n",
+    "     \"outer_params\": {\"hyperopt_evals\": 128,\n",
+    "                            \"validation_fraction\": 0.2},\n",
+    "    \"iterations\": [500, 100, 1000],\n",
+    "    \"learning_rate\": [0.1, 0.01, 0.2],\n",
+    "    \"depth\": [6, 3, 9],\n",
+    "    \"l2_leaf_reg\": [3.0, 0.1, 10.0],\n",
+    "    \"border_count\": [254, 32, 512],\n",
+    "    \"bagging_temperature\": [1.0, 0.5, 2.0],\n",
+    "    \"random_strength\": [1.0, 0.0, 2.0],\n",
+    "    \"scale_pos_weight\": [1.0, 0.5, 2.0],\n",
+    "    \"colsample_bylevel\": [0.05,1.0],\n",
+    "    \"min_data_in_leaf\":  [1,100] \n",
+    "}\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "09992c23",
    "metadata": {},
@@ -188,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 128,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -251,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 129,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -323,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 130,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -388,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 131,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -401,19 +434,19 @@
     "                \"early_stopping_patience\": 5},\n",
     "    \n",
     "    \"learning_rate\": [0.001, 0.0001], \n",
-    "    \"batch_size\": [128,256,512,1024],\n",
-    "    \"gflu_stages\": [4,8],\n",
+    "    \"batch_size\": [256,512,1024],\n",
+    "    \"gflu_stages\": [2,8],\n",
     "    \"gflu_dropout\": [0.0,0.3],\n",
-    "    \"embedding_dropout\":[0.05,0.3],\n",
+    "    \"embedding_dropout\":[0.0,0.3],\n",
     "    \n",
     "    \n",
     "\"optimizer_fn\": {\n",
-    "        \"Adam\": {\"weight_decay\": [0.0001, 0.01]},\n",
-    "        \"AdamW\": {\"weight_decay\": [0.0001, 0.01]}\n",
+    "        \"Adam\": {\"weight_decay\": [0.0, 0.01]},\n",
+    "        \"AdamW\": {\"weight_decay\": [0.0, 0.01]}\n",
     "    },\n",
-    "    \"scheduler_fn\": {\"ReduceLROnPlateau\": {\"factor\": [0.1, 0.9], \"patience\": [7,10]},\n",
+    "    \"scheduler_fn\": {\"ReduceLROnPlateau\": {\"factor\": [0.1, 0.9], \"patience\": [5,10]},\n",
     "                    \"ExponentialLR\": {\"gamma\": [0.9, 0.99]},  # Adjusted for ExponentialLR\n",
-    "                    \"StepLR\": {\"step_size\": [10, 30], \"gamma\": [0.9, 0.99]}},\n",
+    "                    \"StepLR\": {\"step_size\": [5, 10], \"gamma\": [0.9, 0.99]}},\n",
     "    \n",
     "}\n",
     "\n",
@@ -446,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 132,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -527,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 133,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -592,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 134,
    "id": "f65c1a1a",
    "metadata": {},
    "outputs": [],
@@ -658,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 135,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -713,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 136,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -745,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 137,
    "id": "6f496023",
    "metadata": {},
    "outputs": [],
@@ -762,6 +795,7 @@
     "    generate_model_template(\"titanic\",\"node\", param_grid = node_small_param_grid.copy()),\n",
     "    generate_model_template(\"titanic\",\"autoint\", param_grid = autoint_small_param_grid.copy()),\n",
     "    generate_model_template(\"titanic\",\"tabtransformer\", param_grid = tabtransformer_small_param_grid.copy()),\n",
+    "    generate_model_template(\"titanic\",\"catboost\", param_grid = catboost_small_param_grid.copy()),\n",
     "\n",
     "    generate_model_template(\"iris\",\"xgb\",param_grid = xgb_small_param_grid.copy()),\n",
     "    generate_model_template(\"iris\", \"mlp\",  param_grid = mlp_small_param_grid.copy()),\n",
@@ -775,6 +809,7 @@
     "    generate_model_template(\"iris\",\"node\", param_grid = node_small_param_grid.copy()),\n",
     "    generate_model_template(\"iris\",\"autoint\", param_grid = autoint_small_param_grid.copy()),\n",
     "    generate_model_template(\"iris\",\"tabtransformer\", param_grid = tabtransformer_small_param_grid.copy()),\n",
+    "    generate_model_template(\"iris\",\"catboost\", param_grid = catboost_small_param_grid.copy()),\n",
     "\n",
     "    generate_model_template(\"housing\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
     "    generate_model_template(\"housing\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
@@ -788,7 +823,9 @@
     "    generate_model_template(\"housing\",\"node\", param_grid = node_large_param_grid.copy()),\n",
     "    generate_model_template(\"housing\",\"autoint\", param_grid = autoint_large_param_grid.copy()),\n",
     "    generate_model_template(\"housing\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
+    "    generate_model_template(\"housing\",\"catboost\", param_grid = catboost_small_param_grid.copy()),\n",
     "\n",
+    "            \n",
     "    generate_model_template(\"adult\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
     "    generate_model_template(\"adult\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
     "    generate_model_template(\"adult\", \"resnet\", param_grid = resnet_large_param_grid.copy()),\n",
@@ -834,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 138,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
