--- a/notebooks/DatasetsExploration.ipynb
+++ b/notebooks/DatasetsExploration.ipynb
@@ -16,7 +16,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
+   "id": "55c7c7b5-eea1-490e-97db-e83042b0bc44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loaders = [\n",
+    "    \"creditcard\",\n",
+    "    \"iris\",\n",
+    "    \"titanic\",\n",
+    "    \"bufix\",\n",
+    "    \"breastcancer\",\n",
+    "    \"housing\",\n",
+    "    \"ageconditions\",\n",
+    "    \"adult\",\n",
+    "    \"heloc\",\n",
+    "    \"covertype\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "aa1afc1d",
    "metadata": {},
    "outputs": [
@@ -24,30 +44,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "SUCCESS creditcard\n",
+      "SUCCESS iris\n",
       "titanic df len: 891\n",
       "survived\n",
       "0    549\n",
       "1    342\n",
-      "Name: count, dtype: int64\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: './modelsdefinition/IGTD/results/titanic_igtd_Euclidean_Euclidean/abs/_index.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m data_loader \u001b[38;5;241m=\u001b[39m create_data_loader(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtitanic\u001b[39m\u001b[38;5;124m'\u001b[39m, test_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.2\u001b[39m, normalize_features \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmean_std\u001b[39m\u001b[38;5;124m\"\u001b[39m, return_extra_info \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m, encode_categorical\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m----> 2\u001b[0m X_train, X_test, y_train, y_test, extra_info \u001b[38;5;241m=\u001b[39m \u001b[43mdata_loader\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Documents/GitHub/WTabRun/dataloaders/dataloader.py:379\u001b[0m, in \u001b[0;36mTitanicDataLoader.load_data\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    377\u001b[0m extra_info \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    378\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mreturn_extra_info:\n\u001b[0;32m--> 379\u001b[0m     extra_info \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcreate_extra_info\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    380\u001b[0m \u001b[43m        \u001b[49m\u001b[43mX_train\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    381\u001b[0m \u001b[43m        \u001b[49m\u001b[43mimg_rows\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m    382\u001b[0m \u001b[43m        \u001b[49m\u001b[43mimg_columns\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m7\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m    383\u001b[0m \u001b[43m        \u001b[49m\u001b[43migtd_path\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m./modelsdefinition/IGTD/results/titanic_igtd_Euclidean_Euclidean/abs/_index.txt\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m    384\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    385\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m X_train, X_test, y_train, y_test, extra_info\n",
-      "File \u001b[0;32m~/Documents/GitHub/WTabRun/dataloaders/dataloader.py:59\u001b[0m, in \u001b[0;36mDataLoader.create_extra_info\u001b[0;34m(self, df, igtd_path, img_rows, img_columns)\u001b[0m\n\u001b[1;32m     50\u001b[0m column_info \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m     51\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcat_col_names\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28mlist\u001b[39m(cat_cols),\n\u001b[1;32m     52\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcat_col_idx\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28mlist\u001b[39m(df\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mget_indexer(cat_cols)),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     55\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnum_col_idx\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28mlist\u001b[39m(df\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mget_indexer(num_cols)),\n\u001b[1;32m     56\u001b[0m }\n\u001b[1;32m     57\u001b[0m extra_info \u001b[38;5;241m=\u001b[39m column_info\n\u001b[0;32m---> 59\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43migtd_path\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[1;32m     60\u001b[0m     extra_info[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcolumn_ordering\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\n\u001b[1;32m     61\u001b[0m         \u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28mint\u001b[39m, f\u001b[38;5;241m.\u001b[39mreadlines()[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m.\u001b[39mstrip()\u001b[38;5;241m.\u001b[39msplit())\n\u001b[1;32m     62\u001b[0m     )\n\u001b[1;32m     63\u001b[0m extra_info[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mimg_rows\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m img_rows\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './modelsdefinition/IGTD/results/titanic_igtd_Euclidean_Euclidean/abs/_index.txt'"
+      "Name: count, dtype: int64\n",
+      "SUCCESS titanic\n",
+      "SUCCESS bufix\n",
+      "SUCCESS breastcancer\n",
+      "SUCCESS housing\n",
+      "0 Index([], dtype='object')\n",
+      "SUCCESS ageconditions\n",
+      "SUCCESS adult\n",
+      "0 Index([], dtype='object')\n",
+      "SUCCESS heloc\n",
+      "SUCCESS covertype\n"
      ]
     }
    ],
    "source": [
-    "data_loader = create_data_loader('titanic', test_size=0.2, normalize_features = \"mean_std\", return_extra_info = True, encode_categorical=False)\n",
-    "X_train, X_test, y_train, y_test, extra_info = data_loader.load_data()"
+    "for i in loaders:\n",
+    "    \n",
+    "    try:\n",
+    "        data_loader = create_data_loader(i, test_size=0.2, normalize_features = \"mean_std\", return_extra_info = True, encode_categorical=False)\n",
+    "        X_train, X_test, y_train, y_test, extra_info = data_loader.load_data()\n",
+    "        print(\"SUCCESS\",i)\n",
+    "    except Exception as e:\n",
+    "        print(\"FAIL\",i)\n",
+    "        print (repr(e))"
    ]
   },
   {
