resnet trial run

--- a/notebooks/Add run elements.ipynb
+++ b/notebooks/Add run elements.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "6ddf4b8d-14a4-44a9-b971-a68161336637",
    "metadata": {},
    "outputs": [],
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "73cfb3bc-817f-40db-a79e-fcabf2757d72",
    "metadata": {},
    "outputs": [],
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "id": "f65c1a1a",
    "metadata": {},
    "outputs": [],
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -778,14 +778,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "id": "6f496023",
    "metadata": {},
    "outputs": [],
    "source": [
     "templates =[generate_model_template(\"titanic\",\"xgb\",param_grid = xgb_small_param_grid.copy()),\n",
     "    generate_model_template(\"titanic\", \"mlp\",  param_grid = mlp_small_param_grid.copy()),\n",
-    "    generate_model_template(\"titanic\", \"resnet\", param_grid = resnet_small_param_grid.copy()),\n",
+    "    generate_model_template(\"titanic\", \"resnet18\", param_grid = resnet_small_param_grid.copy()),\n",
     "    generate_model_template(\"titanic\", \"s1dcnn\", param_grid = s1dcnn_small_param_grid.copy()),\n",
     "    generate_model_template(\"titanic\", \"tabnet\",param_grid = tabnet_small_param_grid.copy()),\n",
     "    generate_model_template(\"titanic\", \"gate\", param_grid = gate_small_param_grid.copy()),\n",
@@ -799,7 +799,7 @@
     "\n",
     "    generate_model_template(\"iris\",\"xgb\",param_grid = xgb_small_param_grid.copy()),\n",
     "    generate_model_template(\"iris\", \"mlp\",  param_grid = mlp_small_param_grid.copy()),\n",
-    "    generate_model_template(\"iris\", \"resnet\", param_grid = resnet_small_param_grid.copy()),\n",
+    "    generate_model_template(\"iris\", \"resnet18\", param_grid = resnet_small_param_grid.copy()),\n",
     "    generate_model_template(\"iris\", \"s1dcnn\", param_grid = s1dcnn_small_param_grid.copy()),\n",
     "    generate_model_template(\"iris\", \"tabnet\",param_grid = tabnet_small_param_grid.copy()),\n",
     "    generate_model_template(\"iris\", \"gate\", param_grid = gate_small_param_grid.copy()),\n",
@@ -813,7 +813,7 @@
     "\n",
     "    generate_model_template(\"housing\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
     "    generate_model_template(\"housing\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
-    "    generate_model_template(\"housing\", \"resnet\", param_grid = resnet_large_param_grid.copy()),\n",
+    "    generate_model_template(\"housing\", \"resnet18\", param_grid = resnet_large_param_grid.copy()),\n",
     "    generate_model_template(\"housing\", \"s1dcnn\", param_grid = s1dcnn_large_param_grid.copy()),\n",
     "    generate_model_template(\"housing\", \"tabnet\",param_grid = tabnet_large_param_grid.copy()),\n",
     "    generate_model_template(\"housing\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
@@ -828,7 +828,7 @@
     "            \n",
     "    generate_model_template(\"adult\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
     "    generate_model_template(\"adult\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
-    "    generate_model_template(\"adult\", \"resnet\", param_grid = resnet_large_param_grid.copy()),\n",
+    "    generate_model_template(\"adult\", \"resnet18\", param_grid = resnet_large_param_grid.copy()),\n",
     "    generate_model_template(\"adult\", \"s1dcnn\", param_grid = s1dcnn_large_param_grid.copy()),\n",
     "    generate_model_template(\"adult\", \"tabnet\",param_grid = tabnet_large_param_grid.copy()),\n",
     "    generate_model_template(\"adult\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
