--- a/notebooks/Add run elements.ipynb
+++ b/notebooks/Add run elements.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 69,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 70,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 71,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -137,16 +137,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 72,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
    "source": [
     "xgb_small_param_grid ={\n",
-    "            \"outer_params\": {\"hyperopt_evals\": 2,\n",
+    "            \"outer_params\": {\"hyperopt_evals\": 128,\n",
     "                            \"validation_fraction\": 0.2},\n",
     "    \n",
-    "            \"n_estimators\": [100,1500],\n",
+    "            \"n_estimators\": [100,5000],\n",
     "            \"max_bin\": [256, 32],\n",
     "            \"tree_method\": [\"auto\", \"hist\"],\n",
     "            \"max_depth\": [4, 12],\n",
@@ -159,27 +159,27 @@
     "            \"lambda\": [0.0, 5.0]\n",
     "        }\n",
     "\n",
-    "\n",
     "xgb_large_param_grid ={\n",
-    "           \n",
+    "            \"outer_params\": {\"hyperopt_evals\": 32,\n",
+    "                            \"validation_fraction\": 0.2},\n",
     "    \n",
-    "            \"n_estimators\": [100,1100],\n",
-    "            \"max_bin\": [128,512],\n",
-    "            \"tree_method\": [\"auto\"],\n",
-    "            \"max_depth\": [4, 10],\n",
-    "            \"learning_rate\": [0.1,0.33],\n",
+    "            \"n_estimators\": [100,5000],\n",
+    "            \"max_bin\": [256, 32],\n",
+    "            \"tree_method\": [\"auto\", \"hist\"],\n",
+    "            \"max_depth\": [4, 12],\n",
+    "            \"learning_rate\": [0.1, 0.33],\n",
     "            \"subsample\": [0.7, 1.0],\n",
-    "            \"colsample_bytree\": [0.7, 1.0],\n",
-    "            \"min_child_weight\": [1,50],\n",
+    "            \"colsample_bytree\": [0.5, 1.0],\n",
+    "            \"min_child_weight\": [1, 10],\n",
     "            \"alpha\": [0.0, 5.0],\n",
     "            \"gamma\": [0.0, 5.0],\n",
     "            \"lambda\": [0.0, 5.0]\n",
-    "        }"
+    "        }\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 73,
    "id": "6ddf4b8d-14a4-44a9-b971-a68161336637",
    "metadata": {},
    "outputs": [],
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 74,
    "id": "73cfb3bc-817f-40db-a79e-fcabf2757d72",
    "metadata": {},
    "outputs": [],
@@ -198,9 +198,9 @@
     "\n",
     "     \"outer_params\": {\"hyperopt_evals\": 128,\n",
     "                            \"validation_fraction\": 0.2},\n",
-    "    \"iterations\": [500, 100, 1000],\n",
-    "    \"learning_rate\": [0.1, 0.01, 0.2],\n",
-    "    \"depth\": [6, 3, 9],\n",
+    "    \"iterations\": [500, 100, 5000],\n",
+    "    \"learning_rate\": [0.1, 0.01, 0.3],\n",
+    "    \"depth\": [6, 4, 12],\n",
     "    \"l2_leaf_reg\": [3.0, 0.1, 10.0],\n",
     "    \"border_count\": [254, 32, 512],\n",
     "    \"bagging_temperature\": [1.0, 0.5, 2.0],\n",
@@ -208,7 +208,24 @@
     "    \"scale_pos_weight\": [1.0, 0.5, 2.0],\n",
     "    \"colsample_bylevel\": [0.05,1.0],\n",
     "    \"min_data_in_leaf\":  [1,100] \n",
-    "}\n"
+    "}\n",
+    "\n",
+    "catboost_large_param_grid = {\n",
+    "\n",
+    "     \"outer_params\": {\"hyperopt_evals\": 32,\n",
+    "                            \"validation_fraction\": 0.2},\n",
+    "    \"iterations\": [500, 100, 5000],\n",
+    "    \"learning_rate\": [0.1, 0.01, 0.3],\n",
+    "    \"depth\": [6, 4, 12],\n",
+    "    \"l2_leaf_reg\": [3.0, 0.1, 10.0],\n",
+    "    \"border_count\": [254, 32, 512],\n",
+    "    \"bagging_temperature\": [1.0, 0.5, 2.0],\n",
+    "    \"random_strength\": [1.0, 0.0, 2.0],\n",
+    "    \"scale_pos_weight\": [1.0, 0.5, 2.0],\n",
+    "    \"colsample_bylevel\": [0.05,1.0],\n",
+    "    \"min_data_in_leaf\":  [1,100] \n",
+    "}\n",
+    "\n"
    ]
   },
   {
@@ -221,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 75,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -284,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 76,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -356,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 77,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -421,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 78,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -479,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 79,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -560,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 80,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -625,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 81,
    "id": "f65c1a1a",
    "metadata": {},
    "outputs": [],
@@ -691,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 82,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -746,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 83,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -778,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 84,
    "id": "6f496023",
    "metadata": {},
    "outputs": [],
@@ -871,7 +888,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 85,
+   "id": "37d19711-11dc-465a-9e11-74b6a1b55571",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "templates = [generate_model_template(\"titanic\",\"catboost\", param_grid = catboost_large_param_grid.copy()),\n",
+    "generate_model_template(\"titanic\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
+    "generate_model_template(\"iris\",\"catboost\", param_grid = catboost_large_param_grid.copy()),\n",
+    "generate_model_template(\"iris\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
+    "\n",
+    "generate_model_template(\"adult\",\"catboost\", param_grid = catboost_large_param_grid.copy()),\n",
+    "generate_model_template(\"adult\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
+    "generate_model_template(\"covertype\",\"catboost\", param_grid = catboost_large_param_grid.copy()),\n",
+    "generate_model_template(\"covertype\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
+    "generate_model_template(\"housing\",\"catboost\", param_grid = catboost_large_param_grid.copy()),\n",
+    "generate_model_template(\"housing\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
+    "generate_model_template(\"creditcard\",\"catboost\", param_grid = catboost_large_param_grid.copy()),\n",
+    "generate_model_template(\"creditcard\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
+    "generate_model_template(\"bufix\",\"catboost\", param_grid = catboost_large_param_grid.copy()),\n",
+    "generate_model_template(\"bufix\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
+    "generate_model_template(\"heloc\",\"catboost\", param_grid = catboost_large_param_grid.copy()),\n",
+    "generate_model_template(\"heloc\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
+    "generate_model_template(\"breastcancer\",\"catboost\", param_grid = catboost_large_param_grid.copy()),\n",
+    "generate_model_template(\"breastcancer\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
+    "generate_model_template(\"ageconditions\",\"catboost\", param_grid = catboost_large_param_grid.copy()),\n",
+    "generate_model_template(\"ageconditions\",\"xgb\",param_grid = xgb_large_param_grid.copy())]\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
