--- a/notebooks/Add run elements.ipynb
+++ b/notebooks/Add run elements.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 1,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 2,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 3,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -137,14 +137,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 4,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
    "source": [
     "xgb_small_param_grid ={\n",
     "            \"outer_params\": {\"hyperopt_evals\": 128,\n",
-    "                            \"validation_fraction\": 0.2},\n",
+    "                            \"validation_fraction\": 0.2,\n",
+    "                            \"early_stopping_rounds\": 30,\n",
+    "                            \"verbose\": False},\n",
     "    \n",
     "            \"n_estimators\": [100,5000],\n",
     "            \"max_bin\": [256, 32],\n",
@@ -161,7 +163,9 @@
     "\n",
     "xgb_large_param_grid ={\n",
     "            \"outer_params\": {\"hyperopt_evals\": 32,\n",
-    "                            \"validation_fraction\": 0.2},\n",
+    "                            \"validation_fraction\": 0.2,\n",
+    "                            \"early_stopping_rounds\": 30,\n",
+    "                            \"verbose\": False},\n",
     "    \n",
     "            \"n_estimators\": [100,5000],\n",
     "            \"max_bin\": [256, 32],\n",
@@ -179,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
    "id": "6ddf4b8d-14a4-44a9-b971-a68161336637",
    "metadata": {},
    "outputs": [],
@@ -189,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "id": "73cfb3bc-817f-40db-a79e-fcabf2757d72",
    "metadata": {},
    "outputs": [],
@@ -197,7 +201,9 @@
     "catboost_small_param_grid = {\n",
     "\n",
     "     \"outer_params\": {\"hyperopt_evals\": 128,\n",
-    "                            \"validation_fraction\": 0.2},\n",
+    "                            \"validation_fraction\": 0.2,\n",
+    "                     \"early_stopping_rounds\": 30,\n",
+    "                     \"verbose\": False},\n",
     "    \"iterations\": [500, 100, 5000],\n",
     "    \"learning_rate\": [0.1, 0.01, 0.3],\n",
     "    \"depth\": [6, 4, 12],\n",
@@ -213,7 +219,9 @@
     "catboost_large_param_grid = {\n",
     "\n",
     "     \"outer_params\": {\"hyperopt_evals\": 32,\n",
-    "                            \"validation_fraction\": 0.2},\n",
+    "                            \"validation_fraction\": 0.2,\n",
+    "                     \"early_stopping_rounds\": 30,\n",
+    "                     \"verbose\": False},\n",
     "    \"iterations\": [500, 100, 5000],\n",
     "    \"learning_rate\": [0.1, 0.01, 0.3],\n",
     "    \"depth\": [6, 4, 12],\n",
@@ -238,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 7,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -301,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 8,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -373,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 9,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -438,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 10,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -496,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 11,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -577,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 12,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -642,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 13,
    "id": "f65c1a1a",
    "metadata": {},
    "outputs": [],
@@ -708,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 14,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -763,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 15,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -795,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 16,
    "id": "6f496023",
    "metadata": {},
    "outputs": [],
@@ -888,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 17,
    "id": "37d19711-11dc-465a-9e11-74b6a1b55571",
    "metadata": {},
    "outputs": [],
@@ -920,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 18,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
