catboost tweaking and logging file handler addition

--- a/notebooks/Add run elements.ipynb
+++ b/notebooks/Add run elements.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 97,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 98,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 99,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 100,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 101,
    "id": "6ddf4b8d-14a4-44a9-b971-a68161336637",
    "metadata": {},
    "outputs": [],
@@ -193,47 +193,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 102,
    "id": "73cfb3bc-817f-40db-a79e-fcabf2757d72",
    "metadata": {},
    "outputs": [],
    "source": [
     "catboost_small_param_grid = {\n",
-    "\n",
-    "     \"outer_params\": {\"hyperopt_evals\": 128,\n",
-    "                            \"validation_fraction\": 0.2,\n",
-    "                     \"early_stopping_rounds\": 30,\n",
-    "                     \"verbose\": False},\n",
-    "    \"iterations\": [500, 100, 5000],\n",
-    "    \"learning_rate\": [0.1, 0.01, 0.3],\n",
-    "    \"depth\": [6, 4, 12],\n",
-    "    \"l2_leaf_reg\": [3.0, 0.1, 10.0],\n",
-    "    \"border_count\": [254, 32, 512],\n",
-    "    \"bagging_temperature\": [1.0, 0.5, 2.0],\n",
-    "    \"random_strength\": [1.0, 0.0, 2.0],\n",
-    "    \"scale_pos_weight\": [1.0, 0.5, 2.0],\n",
+    "    \n",
+    "    \"outer_params\": {\"hyperopt_evals\": 128,\n",
+    "    \"validation_fraction\": 0.2,\n",
+    "    \"early_stopping_rounds\": 100,\n",
+    "    \"verbose\": False},\n",
+    "    \"iterations\": [200, 2000],\n",
+    "    \"learning_rate\": [0.001, 0.1],\n",
+    "    \"depth\": [4, 10],\n",
     "    \"colsample_bylevel\": [0.05,1.0],\n",
-    "    \"min_data_in_leaf\":  [1,100] \n",
+    "    \"l2_leaf_reg\": [0.5, 5.0],\n",
+    "    \"min_child_samples\": [1,100],\n",
+    "    \"bagging_temperature\": [0.1,2.0]\n",
     "}\n",
     "\n",
     "catboost_large_param_grid = {\n",
-    "\n",
-    "     \"outer_params\": {\"hyperopt_evals\": 32,\n",
-    "                            \"validation_fraction\": 0.2,\n",
-    "                     \"early_stopping_rounds\": 30,\n",
-    "                     \"verbose\": False},\n",
-    "    \"iterations\": [500, 100, 5000],\n",
-    "    \"learning_rate\": [0.1, 0.01, 0.3],\n",
-    "    \"depth\": [6, 4, 12],\n",
-    "    \"l2_leaf_reg\": [3.0, 0.1, 10.0],\n",
-    "    \"border_count\": [254, 32, 512],\n",
-    "    \"bagging_temperature\": [1.0, 0.5, 2.0],\n",
-    "    \"random_strength\": [1.0, 0.0, 2.0],\n",
-    "    \"scale_pos_weight\": [1.0, 0.5, 2.0],\n",
+    "    \n",
+    "    \"outer_params\": {\"hyperopt_evals\": 32,\n",
+    "    \"validation_fraction\": 0.2,\n",
+    "    \"early_stopping_rounds\": 100,\n",
+    "    \"verbose\": False},\n",
+    "    \n",
+    "    \"iterations\": [200, 2000],\n",
+    "    \"learning_rate\": [0.001, 0.1],\n",
+    "    \"depth\": [4, 10],\n",
     "    \"colsample_bylevel\": [0.05,1.0],\n",
-    "    \"min_data_in_leaf\":  [1,100] \n",
-    "}\n",
-    "\n"
+    "    \"l2_leaf_reg\": [0.5, 5.0],\n",
+    "    \"min_child_samples\": [1,100],\n",
+    "    \"bagging_temperature\": [0.1,2.0]\n",
+    "}\n"
    ]
   },
   {
@@ -246,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 103,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -309,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 104,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -381,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 105,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -446,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 106,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -504,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 107,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -585,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 108,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -650,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 109,
    "id": "f65c1a1a",
    "metadata": {},
    "outputs": [],
@@ -716,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 110,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -771,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 111,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -803,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 112,
    "id": "6f496023",
    "metadata": {},
    "outputs": [],
@@ -896,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 113,
    "id": "37d19711-11dc-465a-9e11-74b6a1b55571",
    "metadata": {},
    "outputs": [],
@@ -928,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 114,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
