--- a/notebooks/Add run elements.ipynb
+++ b/notebooks/Add run elements.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 37,
    "id": "cbbf2036",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 38,
    "id": "1eb95880",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "id": "6168187d",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "id": "a41e39cf",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "id": "6ddf4b8d-14a4-44a9-b971-a68161336637",
    "metadata": {},
    "outputs": [],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "id": "73cfb3bc-817f-40db-a79e-fcabf2757d72",
    "metadata": {},
    "outputs": [],
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 43,
    "id": "23ca859e",
    "metadata": {},
    "outputs": [],
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 44,
    "id": "922bf234",
    "metadata": {},
    "outputs": [],
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 45,
    "id": "b415b8a0",
    "metadata": {},
    "outputs": [],
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 46,
    "id": "8779a8ff",
    "metadata": {},
    "outputs": [],
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 47,
    "id": "80542919",
    "metadata": {},
    "outputs": [],
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 48,
    "id": "4ec70022",
    "metadata": {},
    "outputs": [],
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 49,
    "id": "f65c1a1a",
    "metadata": {},
    "outputs": [],
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 50,
    "id": "f332524b",
    "metadata": {},
    "outputs": [],
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 51,
    "id": "d54e0e6f",
    "metadata": {},
    "outputs": [],
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 52,
    "id": "37d19711-11dc-465a-9e11-74b6a1b55571",
    "metadata": {},
    "outputs": [],
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 53,
    "id": "6f496023",
    "metadata": {},
    "outputs": [],
@@ -917,13 +917,28 @@
     "    generate_model_template(\"covertype\",\"node\", param_grid = node_large_param_grid.copy()),\n",
     "    generate_model_template(\"covertype\",\"autoint\", param_grid = autoint_large_param_grid.copy()),\n",
     "    generate_model_template(\"covertype\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
-    " generate_model_template(\"covertype\",\"catboost\", param_grid = catboost_large_param_grid.copy()),\n",
-    "]"
+    "     generate_model_template(\"covertype\",\"catboost\", param_grid = catboost_large_param_grid.copy()),\n",
+    "\n",
+    "    generate_model_template(\"creditcard\",\"xgb\",param_grid = xgb_large_param_grid.copy()),\n",
+    "    generate_model_template(\"creditcard\", \"mlp\",  param_grid = mlp_large_param_grid.copy()),\n",
+    "    generate_model_template(\"creditcard\", \"resnet18\", param_grid = resnet_large_param_grid.copy()),\n",
+    "    generate_model_template(\"creditcard\", \"s1dcnn\", param_grid = s1dcnn_large_param_grid.copy()),\n",
+    "    generate_model_template(\"creditcard\", \"tabnet\",param_grid = tabnet_large_param_grid.copy()),\n",
+    "    generate_model_template(\"creditcard\", \"gate\", param_grid = gate_large_param_grid.copy()),\n",
+    "    generate_model_template(\"creditcard\",\"fttransformer\", param_grid = fttransformer_large_param_grid.copy()),\n",
+    "    generate_model_template(\"creditcard\", \"categoryembedding\", param_grid = catembed_large_param_grid.copy()),\n",
+    "    generate_model_template(\"creditcard\",\"gandalf\", param_grid = gandalf_large_param_grid.copy()),\n",
+    "    generate_model_template(\"creditcard\",\"node\", param_grid = node_large_param_grid.copy()),\n",
+    "    generate_model_template(\"creditcard\",\"autoint\", param_grid = autoint_large_param_grid.copy()),\n",
+    "    generate_model_template(\"creditcard\",\"tabtransformer\", param_grid = tabtransformer_large_param_grid.copy()),\n",
+    "    generate_model_template(\"creditcard\",\"catboost\", param_grid = catboost_large_param_grid.copy()),\n",
+    "]\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 54,
    "id": "67431322",
    "metadata": {},
    "outputs": [],
